final submission of beta
resourced Airports csv from (OurAirports.org)
set up the final touches on the main logic class
finished the menus and UI elements
refactored a couple of files
many, many, many bugfixes