@@ -1,9 +1,12 @@
 package Objects;
 
 import java.io.File;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
 
 public class Person {
     private final String Name;
@@ -46,8 +49,9 @@ public class Person {
         );
     }
 
-    public void saveToFile(String path) throws IOException {
-        Path fileName = Path.of(path);
+    public void saveToFile() throws IOException {
+        String fileName = "saved passes/active_passengers.csv";
+        Path path = Paths.get(fileName);
         String entry = String.format("%s,%s,%s,%s,%s",
                 Name,
                 Email,
@@ -55,20 +59,44 @@ public class Person {
                 Gender,
                 Age
         );
+        boolean updateFile = false;
         try {
             // Create new file
             // if it does not exist
-            File f = new File(path);
+            File f = new File(fileName);
             if (f.createNewFile()) {
                 System.out.println("New File Created : " + f.getName());
-            }else {
-                System.out.println("File Already Exists");
+            } else {
+                ArrayList<String> allPassengers = (ArrayList<String>) Files.readAllLines(path);
+                ArrayList<String> newPassengerList = new ArrayList<>();
+                for (String currentPassenger : allPassengers) {
+                    String[] pass = currentPassenger.split(",", 5);
+                    if (pass[0].equalsIgnoreCase(Name)) {
+                        newPassengerList.add(entry);
+                        updateFile = true;
+                    } else {
+                        newPassengerList.add(currentPassenger);
+                    }
+                }
+                if (updateFile) {
+                    try {
+                        Files.delete(path);
+                        if (f.createNewFile()) {
+                            System.out.println("File entry updated.");
+                        }
+                    }
+                    catch (Exception e) {
+                        System.err.println(e);
+                    }
+                }
+                FileWriter writer = new FileWriter(fileName, true);
+                writer.write("\n" + entry);
+                writer.flush();
+                writer.close();
+                System.out.println("Passenger Saved");
             }
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             System.err.println(e);
         }
-        Files.writeString(fileName,entry);
-        System.out.println("Pass Saved");
     }
 }
